--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 This is the public repro for the code and files that make up a simple map tip using the ArcGIS API for JavaScript:  http://bearpanther.com/tip/tip-hover.html
 
-Blog post on the details coming soon.
+Blog post coming soon.
